Dodato objektno relaciono mapiranje svih entiteta i spring security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/movie_database
 spring.datasource.username=postgres
-spring.datasource.password=Lanako1234
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+#jwt
+jwt.secret=d297018bf3433275737631ae8239ba9d
