--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+server.port=8080
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/movie_database
 spring.datasource.username=postgres
@@ -5,5 +7,13 @@ spring.datasource.password=Lanako1234
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
-#jwt
+###jwt###
 jwt.secret=d297018bf3433275737631ae8239ba9d
+
+### email configuration ###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=moviecourseapp@gmail.com
+spring.mail.password=$$password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
