--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/movie_database
 spring.datasource.username=postgres
-spring.datasource.password=Lanako1234
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
@@ -17,3 +17,6 @@ spring.mail.username=moviecourseapp@gmail.com
 spring.mail.password=$$password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+###exception handler message###
+debug.response=true
