Dodati servisi za korisnika.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 ###exception handler message###
 debug.response=true
+
+###SSL configuration###
+#server.ssl.enabled=true
