--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/movie_database
 spring.datasource.username=postgres
-spring.datasource.password=Lanako1234
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
