Prilikom registracije email i username moraju biti jedinstveni.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 ###exception handler message###
-debug.response=false
+debug.response=true
 
 ###SSL configuration###
 #server.ssl.enabled=true
